--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -602,33 +602,234 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d36a01f0-643f-4cc0-8fef-f4c913b7d2d0",
+   "cell_type": "markdown",
+   "id": "d92d3786-30f4-4013-802c-e0d62bc2fbd9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Sets"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d1e3d36d-5525-4f3a-9c31-c51750039f5f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s1 : {1, 2, 3, 4}\n",
+      "s2 : set()\n",
+      "s3 : {'adi', 'sur', 'moher'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = {1,2,3,4}\n",
+    "s2 = set()\n",
+    "l1 = ['adi','sur','moher']\n",
+    "s3 = set(l1)\n",
+    "print(\"s1 :\",s1)\n",
+    "print(\"s2 :\",s2)\n",
+    "print (\"s3 :\",s3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f491504e-e0ac-4433-9f5c-ef52499948d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adi\n",
+      "sur\n",
+      "moher\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in s3:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "16f631fc-9c3f-4ee3-b7fc-2e5f94d56427",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orange\n",
+      "banana\n",
+      "mango\n"
+     ]
+    }
+   ],
+   "source": [
+    "basket = {\"orange\",\"mango\",\"banana\",\"orange\"}\n",
+    "for i in basket:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cdb3ca30-bcbb-42fc-965a-7b04848b7d17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orange\n",
+      "grapes\n",
+      "banana\n",
+      "apricot\n",
+      "water melon\n",
+      "mango\n"
+     ]
+    }
+   ],
+   "source": [
+    "basket.add('apricot')\n",
+    "basket.update(['grapes','water melon'])\n",
+    "#print (basket)\n",
+    "for i in basket:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "786007c4-e4ba-43af-a233-c40e1a26f5dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total number of element present in basket : 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"total number of element present in basket :\",len(basket))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6c7a793c-3558-46c8-b187-8daa6a9b489d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max and min value in s1 : 90 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = {1,34,90,89,36,71}\n",
+    "print(\"Max and min value in s1 :\",max(s1),min(s1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "41fbd425-7ed4-4809-9d78-88510870d581",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'orange', 'grapes', 'banana', 'apricot', 'water melon', 'mango'}\n",
+      "{'grapes', 'banana', 'apricot', 'water melon', 'mango'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(basket)\n",
+    "basket.remove('orange')\n",
+    "print(basket)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53cb6958-c147-4b07-b34f-79bc42231aef",
+   "metadata": {},
+   "source": [
+    "## Mathematical Operations on sets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6da31993-8246-4dac-8c49-72bfe6939165",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "union : {'mohan', 'sohan', 'subham', 'aditya', 'sumit', 'sunil', 'rahul'}\n",
+      "Intersection : {'sohan'}\n",
+      "Difference : {'mohan', 'rahul', 'aditya'}\n",
+      "Symmetric Difference : {'mohan', 'subham', 'aditya', 'sunil', 'sumit', 'rahul'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Union\n",
+    "# Intersection\n",
+    "# Difference\n",
+    "# Symmetric Difference\n",
+    "s1 = {'aditya','mohan','sohan','rahul'}\n",
+    "s2 = {'sumit','sunil','sohan','subham'}\n",
+    "print('union :',s1 | s2)\n",
+    "print('Intersection :',s1 & s2)\n",
+    "print('Difference :',s1 - s2)\n",
+    "print('Symmetric Difference :',s1 ^ s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0f31f4c0-558a-4229-8c90-2edf1f7908ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "union : {'mohan', 'sohan', 'subham', 'aditya', 'sumit', 'sunil', 'rahul'}\n",
+      "Intersection : {'sohan'}\n",
+      "Difference : {'mohan', 'rahul', 'aditya'}\n",
+      "Symmetric Difference : {'mohan', 'subham', 'aditya', 'sunil', 'sumit', 'rahul'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# same operations using the methods\n",
+    "print(\"union :\",s1.union(s2))\n",
+    "print(\"Intersection :\",s1.intersection(s2))\n",
+    "print(\"Difference :\",s1.difference(s2))\n",
+    "print(\"Symmetric Difference :\",s1.symmetric_difference(s2))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f631fc-9c3f-4ee3-b7fc-2e5f94d56427",
+   "id": "d2b252b5-d873-465f-a864-6d17704e838c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -636,7 +837,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdb3ca30-bcbb-42fc-965a-7b04848b7d17",
+   "id": "9245ce6a-8649-4dec-91b9-456284a4ffd2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1f14996-3e40-482f-8d92-2156a5f34e02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1df3d95b-692d-48dc-aa03-c47af03487cd",
    "metadata": {},
    "outputs": [],
    "source": []
