add conditional practice questions

--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -827,25 +827,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2b252b5-d873-465f-a864-6d17704e838c",
+   "cell_type": "markdown",
+   "id": "808ce1ab-bf96-4903-8ed0-ea5423f2602a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Dictionary"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9245ce6a-8649-4dec-91b9-456284a4ffd2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'telangana': 'hydrabad', 'bihar': 'patna', 'madhya pradesh': 'Bhopal'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "capitals = {\"telangana\":\"hydrabad\",\"bihar\":\"patna\",\"madhya pradesh\":\"Bhopal\"}\n",
+    "print(capitals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1f14996-3e40-482f-8d92-2156a5f34e02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'uk': 'london', 'france': 'paris', 'ireland': 'dublin'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create dictionary from other class\n",
+    "dict1 = dict(uk=\"london\",france=\"paris\",ireland=\"dublin\")\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1df3d95b-692d-48dc-aa03-c47af03487cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'uk': 'london', 'france': 'paris', 'ireland': 'dublin'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#from list of tuples\n",
+    "dict2 = dict([('uk','london'),('france','paris'),('ireland','dublin')])\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cb9e09d8-8441-4b26-924a-932f840d40da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'uk': 'london', 'france': 'paris', 'ireland': 'dublin'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from tuple of lists\n",
+    "dict3 = dict((['uk','london'],['france','paris'],['ireland','dublin']))\n",
+    "print(dict3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1f14996-3e40-482f-8d92-2156a5f34e02",
+   "id": "e3cb13dc-ffb0-4196-88ee-a2a4ee0a34c7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -853,7 +924,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1df3d95b-692d-48dc-aa03-c47af03487cd",
+   "id": "fe4f447f-7041-46f6-9374-cdce40352b38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d373bcfb-ae9a-45eb-8e93-e8a7dc2dcc7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b36e7a4-d3ea-4134-9cf5-d84b2180ac4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ad26fc-966c-41b9-99d2-3c72190b65d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd5994f8-cfb8-4076-a43b-7ed3b0bd851a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb47fd5a-d2a0-4d2a-9b6e-7480ef8c5a44",
    "metadata": {},
    "outputs": [],
    "source": []
