Input and output in another file week 6 complete

--- a/Week6.ipynb
+++ b/Week6.ipynb
@@ -320,8 +320,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "900796f5-0508-4548-aa9b-ff849f988063",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the source file name: messages.txt\n",
+      "Enter the destination file name : messages1.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copy content from one file to another file\n",
+    "source_file = input(\"Enter the source file name:\")\n",
+    "destination_file = input(\"Enter the destination file name :\")\n",
+    "\n",
+    "f1 = open(source_file,'r')\n",
+    "f2 = open(destination_file,'w')\n",
+    "while True:\n",
+    "    data = f1.read(1)\n",
+    "    if data == \"\":\n",
+    "        break\n",
+    "    f2.write(data)\n",
+    "f1.close()\n",
+    "f2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b120942e-896b-4865-acf2-4dba07e7ca27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the source file : messages.txt\n",
+      "Enter the destination file : messages1.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# append content from one file to another file\n",
+    "source_file = input(\"Enter the source file :\")\n",
+    "destination_file = input(\"Enter the destination file :\")\n",
+    "\n",
+    "f1 = open(source_file,'r')\n",
+    "f2 = open(destination_file,'a')\n",
+    "while True:\n",
+    "    data = f1.read(1)\n",
+    "    if data == \"\":\n",
+    "        break\n",
+    "    f2.write(data)\n",
+    "f1.close()\n",
+    "f2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "300ad3e7-fcb4-4fd6-a3b8-205742dab69b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter first num : 9\n",
+      "Enter second num : 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "7\n",
+      "4.5\n",
+      "18\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using mymath.py module\n",
+    "import mymath\n",
+    "x = int(input(\"Enter first num :\"))\n",
+    "y = int(input(\"Enter second num :\"))\n",
+    "\n",
+    "print(mymath.add(x,y))\n",
+    "print(mymath.sub(x,y))\n",
+    "print(mymath.div(x,y))\n",
+    "print(mymath.mult(x,y))\n",
+    "print(mymath.mod(x,y))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e630f30b-17fc-4d3a-b61d-9e47f908ae03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name of the module :  mymath\n",
+      "The docstring of the module is :  This is a custom module \n",
+      "The current location of the module : C:\\Users\\adity\\Python For DS\\mymath.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing module properties\n",
+    "print(\"The name of the module : \",mymath.__name__)\n",
+    "print(\"The docstring of the module is :\",mymath.__doc__)\n",
+    "print(\"The current location of the module :\",mymath.__file__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "50021630-8ba6-459d-bb0a-be3de75ca9e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version \n",
+      " : 3.11.7 | packaged by Anaconda, Inc. | (main, Dec 15 2023, 18:05:47) [MSC v.1916 64 bit (AMD64)]\n",
+      "sys.path \n",
+      " : ['C:\\\\Users\\\\adity\\\\Python For DS', 'C:\\\\Users\\\\adity\\\\anaconda3\\\\python311.zip', 'C:\\\\Users\\\\adity\\\\anaconda3\\\\DLLs', 'C:\\\\Users\\\\adity\\\\anaconda3\\\\Lib', 'C:\\\\Users\\\\adity\\\\anaconda3', '', 'C:\\\\Users\\\\adity\\\\anaconda3\\\\Lib\\\\site-packages', 'C:\\\\Users\\\\adity\\\\anaconda3\\\\Lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\adity\\\\anaconda3\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\adity\\\\anaconda3\\\\Lib\\\\site-packages\\\\Pythonwin']\n",
+      "sys.maxsize \n",
+      " : 9223372036854775807\n",
+      "sys.platform \n",
+      " : win32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import the predefined module sys\n",
+    "import sys\n",
+    "print(\"sys.version \\n :\",sys.version)\n",
+    "print(\"sys.path \\n :\",sys.path)\n",
+    "print(\"sys.maxsize \\n :\",sys.maxsize)\n",
+    "print(\"sys.platform \\n :\",sys.platform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ad461aca-597d-4128-85cd-c700f7e6cfd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to mypack package\n",
+      "Welcome to mystr module \n",
+      "\n",
+      "\n",
+      " Welcome to mymath module\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the first string : aditya\n",
+      "Enter another string : kumar\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "5\n",
+      "False\n",
+      "adityakumar\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter first num : 8\n",
+      "Enter second num : 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "6\n",
+      "4.0\n",
+      "16\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a package called mypack with module mymath and mystr\n",
+    "import mypack.mystr as ms\n",
+    "from mypack.mymath import *\n",
+    "\n",
+    "str1 = input('Enter the first string :')\n",
+    "str2 = input('Enter another string :')\n",
+    "\n",
+    "print(ms.str_len(str1))\n",
+    "print(ms.str_len(str2))\n",
+    "print(ms.str_cmp(str1,str2))\n",
+    "print(ms.str_cat(str1,str2))\n",
+    "\n",
+    "x = int(input(\"Enter first num :\"))\n",
+    "y = int(input(\"Enter second num :\"))\n",
+    "\n",
+    "print(mymath.add(x,y))\n",
+    "print(mymath.sub(x,y))\n",
+    "print(mymath.div(x,y))\n",
+    "print(mymath.mult(x,y))\n",
+    "print(mymath.mod(x,y))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3708e26-5a41-410a-8a22-5b874d89e290",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -329,7 +563,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b120942e-896b-4865-acf2-4dba07e7ca27",
+   "id": "cf0b2530-fe56-483f-9005-882352288fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87a1eda8-7c0a-4b53-9731-67abe11073de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f87bce1-08e5-4412-a5b3-eb6852f9d672",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21cdd624-c030-40fa-9b97-2751993bc5d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2662b104-a7f5-4ae8-a82f-af93c3dfbfcd",
    "metadata": {},
    "outputs": [],
    "source": []
