add some files for python databases config

--- a/Week-8.ipynb
+++ b/Week-8.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "a91cd2ae-836f-49d4-9459-2bb7893097f0",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "92b471cd-66b5-4456-ab4c-cca4153da5dc",
    "metadata": {},
    "outputs": [
@@ -204,20 +204,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f862b73-9cb7-48e8-b4c8-9ee34b135139",
+   "cell_type": "markdown",
+   "id": "93aa612e-a087-42f6-80cf-7c2e33f660b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Assertion\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d0781f93-8b58-43fa-89ac-958906b6b34e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting the function....\n",
+      "Ending the function....\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 7\n",
+    "y = 5\n",
+    "\n",
+    "assert y != 0\n",
+    "my_function(x,y)"
+   ]
   },
   {
    "cell_type": "code",
@@ -231,6 +256,54 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e5ba2780-1762-4a1d-bb76-523c3e8cc6f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "629a1724-79bf-41ef-ac6c-8ebb26b74cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d15dfa5-77aa-44fe-930a-d5877ef49975",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c1bd62d-6c47-4c62-ae11-c31fe7a66e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2132c4f5-34d0-48fa-b0ce-a70ddbe6e4eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "557cd488-2b1e-4b51-9991-12d8cb2802b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21f29749-30cd-4c22-bd2b-1333a1604910",
    "metadata": {},
    "outputs": [],
    "source": []
